Fixed overflow

--- a/main.css
+++ b/main.css
@@ -46,6 +46,7 @@
 .hero .content h2 {
   display: block;
   font-size: 30px;
+  width: 550px;
 }
 
 .hero .content .links {
